# saltstack-nexus3-module

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  noxfile.py  pillar.example  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  integration.yaml  pr.yml  push.yml  tag.yaml  tag.yml
_modules/: nexus3_anonymous_access.py  nexus3_blobstores.py  nexus3_email.py  nexus3_privileges.py  nexus3_readonly.py  nexus3_realms.py  nexus3_repositories.py  nexus3_roles.py  nexus3_status.py  nexus3_tasks.py  nexus3_users.py
_states/: nexus3_blobstores.py  nexus3_email.py  nexus3_privileges.py  nexus3_repositories.py  nexus3_roles.py  nexus3_scripts.py  nexus3_security.py  nexus3_users.py
_utils/: nexus3.py
changelog/: +migration-foundation.added.md  .template.jinja
docs/: conf.py  index.rst
docs/modules/: anonymous_access.md  blobstores.md  email.md  privileges.md  readonly.md  realms.md  repositories.md  roles.md  status.md  tasks.md  users.md
docs/ref/: modules.rst  states.rst
docs/states/: blobstores.md  email.md  privileges.md  repositories.md  roles.md  scripts.md  security.md  users.md
docs/topics/: deprecation-policy.md  installation.md  migration.md
nexus3/: blobstores.sls  repositories.sls
salt/pillar/: nexus3.sls  top.sls
src/: nexus3.py
src/saltext/: __init__.py
src/saltext/nexus3/: __init__.py  loader.py
test-env/: README.md  check_nexus.sh  docker-compose.yml  salt-env.sh  test-env.sh
test-env/files/: config.json
test-env/pillar/nexus/: init.sls
test-env/tests/: test_anonymous_access.py  test_blobstores.py  test_email.py  test_privileges.py  test_readonly.py  test_realms.py  test_repositories.py  test_roles.py  test_users.py
tests/: conftest.py  test_blobstores.py  test_readonly.py  test_repositories.py
tests/files/: integration.yml  minio-setup.sh
tests/functional/: conftest.py  test_loader_calls.py  test_loader_smoke.py
tests/integration/: pytest.ini  test_anonymous_access.py  test_blobstores.py  test_privileges.py  test_realms.py  test_repositories.py  test_roles.py  test_users.py
tests/unit/: test_loader.py  test_state_blobstores.py  test_state_email.py  test_state_privileges.py  test_state_repositories.py  test_state_roles.py  test_state_scripts.py  test_state_security.py  test_state_users.py  test_utils_nexus3.py
(+30 files in other folders)
