[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saltext-nexus3"
version = "0.4.0"
description = "Salt extension modules and states to manage Nexus Repository 3"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "saltstack-nexus3-module contributors" }]
keywords = ["salt", "salt-extension", "nexus", "sonatype"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "requests>=2.28",
]

[project.optional-dependencies]
tests = [
  "pytest>=8",
  "salt>=3006",
]
docs = [
  "myst-parser>=4.0",
  "sphinx>=8.0",
]
dev = [
  "build>=1.2",
  "nox>=2024.10.9",
  "pre-commit>=3.8",
  "ruff>=0.9",
  "towncrier>=24.8",
]

[project.urls]
Homepage = "https://github.com/jsandas/saltstack-nexus3-module"
Repository = "https://github.com/jsandas/saltstack-nexus3-module"
Issues = "https://github.com/jsandas/saltstack-nexus3-module/issues"

[project.entry-points."salt.loader"]
module_dirs = "saltext.nexus3.loader:module_dirs"
states_dirs = "saltext.nexus3.loader:states_dirs"
utils_dirs = "saltext.nexus3.loader:utils_dirs"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.rst"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.towncrier]
package = "saltext.nexus3"
filename = "CHANGELOG.md"
directory = "changelog"
title_format = "## {version} ({project_date})"
issue_format = "#{issue}"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true
